[project]
name = "apis-acdhch-django-invite"
version = "0.2.0"
description = "Invite Links for APIS Instances"
authors = [{name="Birger Schacht", email="birger.schacht@oeaw.ac.at"}]
license = "MIT"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "apis-core-rdf>=0.33.0",
  "django>=5.2"
]

[project.urls]
source = "https://github.com/acdh-oeaw/apis-acdhch-django-invite"
changelog = "https://github.com/acdh-oeaw/apis-acdhch-django-invite/blob/main/CHANGELOG.md"
issues = "https://github.com/acdh-oeaw/apis-acdhch-django-invite/issues"

[dependency-groups]
dev = [
  "ruff>=0.5.4,<0.9.0",
  "djlint~=1.34"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
